--- a/index.html
+++ b/index.html
@@ -2,7 +2,7 @@
 <html lang="en-ca">
 <head>
   <meta charset="utf-8">
-  <title>using a type system</title>
+  <title>using-a-type-system</title>
   <meta name="viewport" content="width=device-width,initial-scale=1">
   <link href="css/type.css" rel="stylesheet">
   <link href="css/main.css" rel="stylesheet">
